--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "prettier": "2.3.2"
   }
 }
