--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -40,6 +41,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
+    "moxios": "^0.4.0",
     "prettier": "2.3.2"
   }
 }
