--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "jotto123" #Must be unique in Heroku
-          heroku_email: "botaprarodar.web@gmail.com"
-          healthcheck: "https://jotto123.herokuapp.com/health"
+          heroku_app_name: "jotto-app" #Must be unique in Heroku
+          heroku_email: "analuizasb@live.com"
+          healthcheck: "https://jotto-app.herokuapp.com/health"
           checkstring: "ok"
